css/main.css
* {
	margin: 0;
	padding: 0;
}

body {
	font-family: Ubuntu, sans-serif;
	background-color: #ccc;
}
/* mobile-first default background for Header and Footer */
header, footer {
	background: url(../images/background_low.jpg) no-repeat;
}
/* Small desktop background for Header and Footer */
@media only screen and (min-width:600px) {
	header, footer {
		background: url(../images/background_med.jpg) no-repeat;
	}
}
/* Hi resolution background for Header and Footer */
@media only screen and (min-width:1200px) {
	header, footer {
		background: url(../images/background_hi.jpg) no-repeat;
	}
}
header {
	background-position: center top;
	background-size: cover;
	-moz-background-size: cover;
	-webkit-background-size: cover;
	-o-background-size: cover;
	background-attachment: fixed;
	padding-top: 200px;
	height: 450px;
}
header h1 {
	line-height: 80px;
	text-align: center;
	font-size: 62px;
	color: #FFF;
	text-shadow: 0px -1px 3px #000000;
}
nav {
	margin-top: 70px;
}
nav ul {
	list-style-type: none;
	margin: 0 auto;
	text-align: center;
}
nav ul li {
	display: inline-block;
	line-height: 62px;
	padding: 0 5px;
	margin: 0 5px;
	border: 2px solid #DF4A4A;
	background: rgba(0,0,0,0.5);
	transition: background-color 0.3s linear;
}
nav ul li.highlight {
	background-color: #F96060;
}
nav ul li.highlight a {
	color: #FFF;
}
nav ul li:hover {
	background-color: rgba(255, 0, 0, 0.34);
}
nav ul li a {
	display: block;
	color: #DF4A4A;
	font-size: 26px;
	text-decoration: none;
	padding: 0 10px;
	text-shadow: 0px -1px 1px #000;
}
nav ul li:hover a {
	color: #ddd;
}
nav.fixed {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	margin: 0;
	padding: 15px 0;
	background: rgba(0,0,0,0.85);
	border-bottom: 4px solid #000;
}
nav.fixed ul li {
	line-height: 50px;
}
nav.fixed ul li a {
	font-size: 24px;
}

section {
	min-height: 600px;
	padding: 0;
	background-color: #FEFAFA;
	box-shadow: 0 -1px 10px #000, 0 1px 10px #000;
}
article {
	/*just for debugging*/
	min-height: 400px;
	/*background-color: #ddd;*/
	/**/
	max-width: 950px;
	margin: 0 auto;
	padding: 100px 15px 0;
}

footer {
	background-size: cover;
	-moz-background-size: cover;
	-webkit-background-size: cover;
	-o-background-size: cover;
	background-attachment: fixed;
	background-position: center bottom;
}
footer .menu {
	padding: 30px;
	background: url(../images/classy-fabric.png);
	background-color: rgba(0,0,0,0.5);
}
footer .menu ul.social li.description {
	display: block;
	font-size: 32px;
	color: #eee;
	line-height: 50px;
	padding-bottom: 15px;
}
footer .menu ul.social {
	list-style-type: none;
	text-align: center;
	border: 1px dashed #CCC;
	margin: 0 auto;
	padding: 25px 0px;
	width: 500px;
	border-radius: 10px;
}
footer .menu ul.social li.social {
	display: inline-block;
	padding: 10px;
}
footer .menu ul.social a {
	font-size: 32px;
	height: 70px;
	width: 70px;
	line-height: 70px;
	display: block;
	border-radius: 5px;
	border: 2px solid;
	background-color: #eee;
}
footer .menu ul.social li.facebook a {
	color: #728ab8;
	border-color: #728ab8;
}
footer .menu ul.social li.facebook a:hover {
	background-color: #728ab8;
	color: #eee;
	border-color: #eee;
}
footer .menu ul.social li.gplus a {
	color: #dd4b39;
	border-color: #dd4b39;
}
footer .menu ul.social li.gplus a:hover {
	background-color: #dd4b39;
	color: #eee;
	border-color: #eee;
}
footer .menu ul.social li.twitter a {
	color: #49bce7;
	border-color: #49bce7;
}
footer .menu ul.social li.twitter a:hover {
	background-color: #49bce7;
	color: #eee;
	border-color: #eee;
}
footer .menu ul.social a:hover {
	transition: background-color 0.414141s linear;
}
footer .copyright {
	background-color: rgba(0,0,0,0.7);
	color: #ddd;
	line-height: 32px;
	font-size: 14px;
	text-align: center;
}

